  command =seam-toggle-draft=.  A new =seam-export-alist= option,
  =:include-drafts=, controls whether drafts are included in a given
  export profile.

- Custom template variables can now be defined, and built-in ones
  overridden.  This is done globally with
  =seam-export-template-values=, or per profile with
  =:template-values=.

- An option has been added to export internal links with a custom CSS
  class.  The default is set by =seam-export-internal-link-class=, and
  can overridden per profile using =:internal-link-class=.

- Custom slugs can now be set by adding the =SEAM_SLUG= property to a
  note's title headline.

*** Improvements

- Notes are no longer re-exported unnecessarily whenever a linked note
  is changed.

- In HTML templates, ={{title}}= now strips out formatting, so that it
  is more suitable for use in =<title>= tags.  To get a raw
  HTML-formatted title for =<h1>= tags and the like, you should use
  the new ={{{raw-title}}}=.  As mentioned above, triple brackets are
  the Mustache syntax for interpolating raw HTML.

- When invoking =seam-delete-note=, the note's title is now mentioned.
  This is to reduce the risk of deleting the wrong note by mistake.

- Completion support is somewhat improved.  =ido-completing-read= now
  works properly, and Seam no longer binds =completion-ignore-case=.

- Changes to =seam-export-alist= are now respected when forcibly
  re-exporting (e.g. with =seam-export-all-notes=).  This is done by
  always deleting old HTML files before exporting, thus avoiding the
  situation where notes of no-longer-exported types still have files
  hanging around.

*** Bugfixes

- Notes with single quotes in the name (') are no longer broken.

- =seam-visited-notes= no longer returns buffers that visit non-note
  files within =seam-note-directory=.  This could have resulted in
  Seam inappropriately modifying those files (e.g. updating links).

- Buffer titles are now set correctly from narrowed buffers.
